--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before install:
   - docker build -t nathannanxu/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true USERNAME/react-test npm test
+  - docker run -e CI=true nathannanxu/react-test npm test
 
 after_success:
   - docker build -t nathannanxu/multi-client ./client
